# medcor_new_backend

./: .dockerignore  .env.example  .gitignore  .replit  API_DOCUMENTATION.md  AWS_EC2_DEPLOYMENT_GUIDE.md  AWS_SECURITY_GROUP_SETUP.md  CAMERA_CONFLICT_FIXES.md  CELERY_ASYNC_AI_INTEGRATION.md  CENTRALIZED_CAMERA_IMPLEMENTATION.md  CI_CD_DEPLOYMENT_GUIDE.md  CLIENT_ENDPOINTS_DOCUMENTATION.md  DATABASE_CONFIGURATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_API_FIXES.md  DEPLOY_NOW.sh  DEPLOY_ROLE_FIX_MANUAL.md  DJANGO_ADMIN_SETUP.md  Dockerfile  Dockerfile.frontend  FIX_DJANGO_ADMIN_404.md  GITHUB_ACTIONS_DEPLOYMENT_GUIDE.md  HAIR_ANALYSIS_ERRORS.md  HAIR_ANALYSIS_FINAL_ERRORS.md  Instructions.md  Jenkinsfile  KAMERA_ENDPOINTS.md  KAMERA_SISTEMI_COZUM.md  KAMERA_TRIGGER_SISTEMI.md  LOCAL_DJANGO_SETUP_GUIDE.md  MCP_CELERY_INTEGRATION_GUIDE.md  MCP_COMPLETE_DOCUMENTATION.md  MEDCOR_BACKEND_DEPLOYMENT.md  Makefile  PORT_CONFIGURATION.md  RABBITMQ_INTEGRATION_SUMMARY.md  REACT_HOOKS_ERROR_FIX.md  (+122 more)
.github/: dependabot.yml
appointments/: admin.py  models.py  serializers.py  urls.py  views.py
asterisk-dialer/: DEPLOYMENT_GUIDE.md  ami.class.php  api.php  config.php  database.sql  index.html
attached_assets/: Animation - 1751643509462_1751646063927.lottie  Medcore_1754950368283.pem  Pasted--1-BACKEND-ERR-HTTP-HEADERS-SENT-ve-Crash-Sorunu-Sebep-ERR-HTTP-HEADERS-SENT-sunucuda-ayn-r-1752014048679_1752014048680.txt  Pasted--AI-Self-Healing-Agent-Example-Replit-compatible-This-minimal-example-uses-Flask-as-a-mock-web-1751697899289_1751697899289.txt  Pasted--DOCTYPE-html-html-lang-en-head-script-type-module-import-creat-1754643338916_1754643338919.txt  Pasted--EMITT-Voice-Agent-Prompt-Elif-Priority-Listening-Natural-Smile-Edition-Internal-use-o-1755249873540_1755249873540.txt  Pasted--HeyGen-StreamingAvatar-Chat-Agent-on-Replit-Uses-official-HeyGen-StreamingAvatar-API-WebRTC-f-1751710703306_1751710703307.txt  Pasted--High-Performance-Streaming-Avatar-Optimization-with-HeyGen-JS-SDK-on-Replit-Real-time-streaming-1751709447620_1751709447620.txt  Pasted--Kodun-al-ma-Ak-ve-Muhtemel-at-ma-Noktalar-Kod-Par-as-zeti-ts-Kopyala-D-zenle-1--1752080630379_1752080630381.txt  Pasted--Muhtemel-Teknik-Sebepler-ve-Profesyonel-z-m-nerileri-1-Stream-in-Centralize-Edilmemesi-A-1752070958437_1752070958440.txt  Pasted--Parametric-Streaming-Avatar-Architecture-with-HeyGen-on-Replit-Server-sends-lightweight-JSON-fr-1751710349785_1751710349785.txt  Pasted--Parametric-Streaming-Chat-Avatar-with-HeyGen-on-Replit-Real-time-chat-via-WebSocket-user-messa-1751710556835_1751710556835.txt  (+22 more)
client/: index.html  (+1 more)
(+607 files in other folders)
