[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "asyncio>=3.4.3",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.5",
    "django-tenant-schemas>=1.12.0",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "djangorestframework-simplejwt>=5.4.0",
    "django-tenants>=3.8.0",
    "django-tenant-users>=2.1.1",
]
