[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "asyncio>=3.4.3",
    "bcrypt==4.1.2",
    "cryptography>=45.0.5",
    "django-tenant-schemas>=1.12.0",
    "django==4.2.7",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.14.0",
    "pillow==10.1.0",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "djangorestframework-simplejwt>=5.4.0",
    "django-tenants>=3.8.0",
    "django-tenant-users>=2.1.1",
    "django-ckeditor>=6.7.3",
    "django-filter>=25.1",
    "drf-spectacular>=0.28.0",
    "mcp>=1.12.0",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
    "dj-database-url>=3.0.1",
    "boto3>=1.40.10",
    "python-weather>=2.1.0",
    "elevenlabs>=2.9.2",
    "openai>=1.99.9",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "azure-cognitiveservices-vision-face>=0.6.1",
    "geopy>=2.4.1",
    "reportlab>=4.4.3",
    "aiofiles>=24.1.0",
    "whitenoise>=6.9.0",
    "django-chatter>=0.1.1",
]
